<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kaboo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="icon_user">&#xf007;</string>
    <string name="icon_add">&#xf067;</string>
    <string name="icon_readmore">&#xf178;</string>
    <string name="icon_answer">&#xf095;</string>
    <string name="icon_mute">&#xf131;</string>

    <string name="icon_like">&#xf087;</string>
    <string name="icon_share">&#xf064;</string>
    <string name="icon_follow">&#xf005;</string>

    <string name="icon_android">&#xf17b;</string>
    <string name="icon_dropbox">&#xf16b;</string>
    <string name="icon_soundcloud">&#xf1be;</string>
    <string name="icon_spotify">&#xf1bc;</string>

    <string name="icon_vine">&#xf1ca;</string>
    <string name="icon_twitter">&#xf099;</string>
    <string name="icon_tumbler">&#xf173;</string>
    <string name="icon_stackoverflow">&#xf16c;</string>
    <string name="icon_gplus">&#xf0d5;</string>
    <string name="icon_facebook">&#xf09a;</string>

    <string name="icon_entypo_facebook">&#59140;</string>

    <string name="icon_behance">&#xf1b4;</string>
    <string name="icon_dribble">&#xf17d;</string>
    <string name="banner_ad_unit_id">ca-app-pub-8274996670784488/5103269450</string>

    <string name="icon_send">&#xf1d8;</string>
    <string name="icon_download">&#xf0ed;</string>
    <string name="icon_upload">&#xf0ee;</string>
    <string name="icon_config">&#xf085;</string>
    <string name="google_maps_key">AIzaSyCR5BQXXa8f4X_yWB-PheZ8c5yHu2oZfoU</string>
    // Landing
    <string name="lnd_connect_with_facebook">Connect with Facebook</string>
    <string name="lnd_have_account">Already have an account?</string>
    <string name="lnd_sign_up">Sign Up with Email</string>
    <string name="lnd_no_app_version">Couldn\'t get app version</string>
    <string name="lnd_version">v. %1$s</string>

    <string name="disclaimer">1. GENERAL \n1.1 By installing this Kaboo Mobile Application, you agree to be bound by these terms of use (appterms). Please review them carefully before installation and or acceptance.
 \n2. DEFINITIONS  \nThe Kaboo Mobile Application shall mean the software provided by Blueray Systems &amp; Solutions Limited to offer taxi search services.\n
 \n3. DATA PROTECTION \n
Any personal information you supply when using the Kaboo Mobile Application will be used by Blueray Systems &amp; Solutions Limited in accordance with its Privacy Policy.
 \n \n
4. KABOO MOBILE APPLICATION \n
The Kaboo Mobile Application allows you to find Taxis around your location. Such access will be governed by the Blueray Systems &amp; Solutions Limited Terms of Use.
 \n \n
5.USE OF APPLICATION\n
5.1. Blueray Systems &amp; Solutions Limited grants you the non-exclusive, non-transferable, limited right and license to install and use this Application solely and exclusively for your personal use.\n
5.2. You may not use the Application in any manner that could damage, disable, overburden, or impair the Application (or servers or networks connected to the Application), nor may you use the Application in any manner that could interfere with any other party’s use and enjoyment of the Application (or servers or networks connected to the Application).\n
5.3. You agree that you are solely responsible for (and that Blueray Systems &amp; Solutions Limited has no responsibility to you or to any third party for) your use of the Application, any breach of your obligations under the Terms and Conditions, and for the consequences (including any loss or damage which The Company may suffer) of any such breach.\n
 \n
6. PROPRIETARY RIGHTS AND LICENCE \n
6.1. All trade marks, copyright, database rights and other intellectual property rights of any nature in the Kaboo Mobile Application together with the underlying software code are owned either directly by Blueray Systems &amp; Solutions Limited or by Blueray Systems &amp; Solutions Limited licensors. \n
6.2. Blueray Systems &amp; Solutions Limited hereby grants you a worldwide, non-exclusive, royalty-free revocable licence to use the Kaboo Mobile Application for your business and personal use in accordance with these appterms. \n
 \n7. CONDITIONS OF USE \n
7.1. You will not, nor allow third parties on your behalf to (i) make and distribute copies of the Kaboo Mobile Application (ii) attempt to copy, reproduce, alter, modify, reverse engineer, disassemble, decompile, transfer, exchange or translate the Kaboo Mobile Application; or (iii) create derivative works of the Kaboo Mobile Application of any kind whatsoever.
 \n7.2. The Kaboo Mobile Application is currently made available to you free of charge for your personal, non-commercial use. Blueray Systems &amp; Solutions Limited reserves the right to amend or withdraw the Kaboo Mobile Application, or charge for the Kaboo Mobile Application or service provided to you in accordance with these appterms, at any time and for any reason.
 \n7.3. You acknowledge that the terms of agreement with your respective mobile network provider (\‘Mobile Provider\’) will continue to apply when using the Kaboo Mobile Application. As a result, you may be charged by the Mobile Provider for access to network connection services for the duration of the connection while accessing the Kaboo Mobile Application or any such third party charges as may arise. You accept responsibility for any such charges that arise.
 \n7.4. If you are not the bill payer for the mobile telephone or handheld device being used to access the Kaboo Mobile Application, you will be assumed to have received permission from the bill payer for using the Kaboo Mobile Application.
 \n \n8. AVAILABILITY
 \n8.1. This Kaboo Mobile Application is available to handheld mobile devices running Apple iOS , Windows Phone, Blackberry and Android OS Operating Systems. Blueray Systems &amp; Solutions Limited will use reasonable efforts to make the Kaboo Mobile Application available at all times. However you acknowledge the Kaboo Mobile Application is provided over the internet and mobile networks and so the quality and availability of the Kaboo Mobile Application may be affected by factors outside Blueray Systems &amp; Solutions Limited’s reasonable control.
 \n8.2. Blueray Systems &amp; Solutions Limited, its group of companies and sub-contractors do not accept any responsibility whatsoever for unavailability of the Kaboo Mobile Application, or any difficulty or inability to download or access content or any other communication system failure which may result in the Kaboo Mobile Application being unavailable.
         \n8.3. Blueray Systems &amp; Solutions Limited will not be responsible for any support or maintenance for the Kaboo Mobile Application.
 \n \n9. SYSTEM REQUIREMENTS
 \n9.1. In order to use the Kaboo Mobile Application, you are required to have a compatible mobile telephone or handheld device, internet access, and the necessary minimum specifications (Software Requirements).
 \n9.2. The Software Requirements are as follows: Apple iOS devices running iOS 4 or iOS 5, and Android OS devices running Android OS 4.0  up ; Language: English.
 \n9.3. The version of the Kaboo Mobile Application software may be upgraded from time to time to add support for new functions and services.
 \n \n10. TERMINATION
 \n10.1. Blueray Systems &amp; Solutions Limited may terminate use of the Kaboo Mobile Application at any time by giving notice of termination to you.
 \n10.2. Upon any termination, (a) the rights and licenses granted to you herein shall terminate; (b) you must cease all use of the Software;
 \n \n11. LIMITATION OF LIABILITY
 \n11.1. In no event will Blueray Systems &amp; Solutions Limited be liable for any direct, indirect, special, punitive, exemplary or consequential losses or damages of whatsoever kind arising out of your use or access to the Kaboo Mobile Application, including loss of profit or the like whether or not in the contemplation of the parties, whether based on breach of contract, tort (including negligence), product liability or otherwise. \n 11.2. Blueray Systems &amp; Solutions Limited is not liable to you for any damage or alteration to your equipment including but not limited to computer equipment, handheld device or mobile telephones as a result of the installation or use of the Kaboo Mobile Application.
 \n11.3. Blueray Systems &amp; Solutions Limited will not accept liability for any incidents or losses arising from the usage of the Kaboo Mobile Application. Hence you are advised to exercise extreme caution when dealing with drivers contacted or contracted via this application.
 \n \n12. DISCLAIMER OF WARRANTIES \nTo the maximum extent permitted by law, and for the avoidance of doubt, Blueray Systems &amp; Solutions Limited hereby disclaims all implied warranties with regard to the Kaboo Mobile Application. The Kaboo Mobile Application and software are provided \"as is\" and \"as available\" without warranty of any kind. Please note that Blueray Systems &amp; Solutions Limited will not be liable for any losses or incidents arising from the usage of this service. Users are advised to proceed with caution.

</string>


</resources>
